# FastAPI_comics

./: .env  README.md  pyproject.toml
app/: app.py  views.py
app/core/: .env  config.py  db.py  repository.py  schemas.py
app/core/model/: base.py
app/test/: conftest.py  pytest.ini  test_create_rating.py
